--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,5 @@ org.gradle.jvmargs=-Xmx1G
 	masa_minecraft_version=1.19.4
 	malilib_fileid=4519977
 	litematica_fileid=4492787
+	carpet_version=1.4.101
 
