Restrict to Minecraft 1.19.3-1.19.4

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ modrinth {
     token = project.hasProperty('modrinthKey') ? modrinthKey : null
     projectId = 'litemoretica'
     uploadFile = remapJar
+    version = "mc${project.minecraft_version}-${project.version}"
     gameVersions.set(project.modrinth_compatible_versions.split(',').toList())
     loaders.set(['fabric', 'quilt'])
     def changelogFile = file('changelog.txt')
@@ -56,8 +57,7 @@ processResources {
 
     filesMatching("fabric.mod.json") {
         expand "version": project.version,
-                "minecraft_version": project.minecraft_version,
-                "loader_version": project.loader_version
+                "mcversions": project.modjson_compatible_versions
     }
 }
 
