--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,8 @@ org.gradle.jvmargs=-Xmx1G
 	maven_group = net.earthcomputer
 	archives_base_name = litemoretica
 
-	modrinth_compatible_versions = 1.19,1.19.1,1.19.2,1.19.3,1.19.4
+	modrinth_compatible_versions = 1.19.3,1.19.4
+	modjson_compatible_versions = >=1.19.3 <=1.19.4
 
 # Dependencies
 	fabric_api_version=0.83.0+1.19.4
