--- a/gradle.properties
+++ b/gradle.properties
@@ -2,23 +2,23 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.20.1
-	yarn_mappings=1.20.1+build.2
-	loader_version=0.14.21
+	# check these on https://modmuss50.meq/fabric.html
+	minecraft_version=1.20.2
+	yarn_mappings=1.20.2+build.4
+	loader_version=0.15.7
 
 # Mod Properties
 	mod_version = 1.2.5
 	maven_group = net.earthcomputer
 	archives_base_name = litemoretica
 
-	modrinth_compatible_versions = 1.20,1.20.1
-	modjson_compatible_versions = >=1.20 <=1.20.1
+	modrinth_compatible_versions = 1.20.2
+	modjson_compatible_versions = 1.20.2
 
 # Dependencies
-	fabric_api_version=0.83.1+1.20.1
-	masa_minecraft_version=1.20.1
-	malilib_fileid=4593073
-	litematica_fileid=4593296
-	carpet_version=1.4.112
+	fabric_api_version=0.91.6+1.20.2
+	masa_minecraft_version=1.20.2
+	malilib_fileid=4788432
+	litematica_fileid=4789765
+	carpet_version=1.4.121
 
