--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://modmuss50.meq/fabric.html
-	minecraft_version=1.20.2
-	yarn_mappings=1.20.2+build.4
+	minecraft_version=1.20.4
+	yarn_mappings=1.20.4+build.3
 	loader_version=0.15.7
 
 # Mod Properties
@@ -12,13 +12,13 @@ org.gradle.jvmargs=-Xmx1G
 	maven_group = net.earthcomputer
 	archives_base_name = litemoretica
 
-	modrinth_compatible_versions = 1.20.2
-	modjson_compatible_versions = 1.20.2
+	modrinth_compatible_versions = 1.20.3,1.20.4
+	modjson_compatible_versions = >=1.20.3 <=1.20.4
 
 # Dependencies
-	fabric_api_version=0.91.6+1.20.2
-	masa_minecraft_version=1.20.2
-	malilib_fileid=4788432
-	litematica_fileid=4789765
-	carpet_version=1.4.121
+	fabric_api_version=0.96.11+1.20.4
+	masa_minecraft_version=1.20.4
+	malilib_fileid=5096807
+	litematica_fileid=5170070
+	carpet_version=1.4.128
 
