--- a/build.gradle
+++ b/build.gradle
@@ -20,14 +20,6 @@ modrinth {
 
 repositories {
     maven {
-        name = 'CurseMaven'
-        url = 'https://www.cursemaven.com'
-        content {
-            includeGroup 'curse.maven'
-        }
-    }
-
-    maven {
         name = 'Modrinth'
         url = 'https://api.modrinth.com/maven'
         content {
@@ -44,8 +36,8 @@ dependencies {
 
     modImplementation fabricApi.module('fabric-resource-loader-v0', project.fabric_api_version)
     modImplementation fabricApi.module('fabric-networking-api-v1', project.fabric_api_version)
-    modImplementation "curse.maven:malilib-${project.masa_minecraft_version}-303119:${project.malilib_fileid}"
-    modImplementation "curse.maven:litematica-${project.masa_minecraft_version}-308892:${project.litematica_fileid}"
+    modImplementation "maven.modrinth:malilib:${project.malilib_version}"
+    modImplementation "maven.modrinth:litematica:${project.litematica_version}"
     modImplementation "maven.modrinth:carpet:${project.carpet_version}"
 }
 
