--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://modmuss50.meq/fabric.html
+	# check these on https://modmuss50.me/fabric.html
 	minecraft_version=1.20.2
 	yarn_mappings=1.20.2+build.4
 	loader_version=0.15.7
